# glia-functions-tools

./: .gitignore  README.md  babel.config.js  create-bridge-modules.js  function-hello-world.js  function.js  index.js  install.js  jest-setup.js  jest.config.js  jsdoc.json  package-lock.json  package.json  test-cli.js
.github/: CODEOWNERS
api/: ApiError.html  AuthenticationError.html  BaseCommand_BaseCommand.html  CircuitBreaker.html  ConfigurationError.html  FunctionError.html  GliaError.html  NetworkDetector.html  NetworkError.html  OfflineManager.html  OperationQueue.html  PersistentCacheStorage.html  RateLimitError.html  ResponseCache.html  ValidationError.html  cli_base-command.js.html  cli_command-router.js.html  cli_error-handler.js.html  cli_index.js.html  commands_createAndDeployVersion.js.html  commands_createFunction.js.html  commands_createTestHtml.js.html  commands_createTestPage.js.html  commands_dev.js.html  commands_fetchLogs.js.html  commands_handleRequest.js.html  commands_init.js.html  commands_invokeFunction.js.html  commands_listFunctions.js.html  commands_listTemplates.js.html  commands_profiles_createProfile.js.html  commands_profiles_deleteProfile.js.html  commands_profiles_listProfiles.js.html  commands_profiles_switchProfile.js.html  commands_updateEnvVars.js.html  commands_updateFunction.js.html  global.html  index.html  (+19 more)
python-tools/glia-mcp/mcp/: README.md  glia_functions_mcp_server.py  pyproject.toml  requirements.txt  run.sh
python-tools/glia-mcp/mcp/glia_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+534 files in other folders)
