[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glia_mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "mcp",
    "pyyaml>=6.0.2",
]

[project.scripts]
glia-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "client"]
